# pmiitl

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yml  program.txt  resstore_backup.tar  restore_backup.tar
commands/: coverage.sh  hime
homeassistant/: .gitignore  automations.yaml  configuration.yaml
homeassistant/simulated/: input_booleans.yaml  input_numbers.yaml  input_selects.yaml  templates.yaml
src/: errors.rs  lib.rs  main.rs  program.txt
src/equiv_convert/: binary_operations.rs  binary_operations_test.rs  conversion_binary_operator.rs  conversion_binary_operator_test.rs  expressions.rs  expressions_test.rs  mod.rs
src/equivalence_converter/: conversion_binary_operator.rs  conversion_binary_operator_test.rs  expressions.rs  mod.rs
src/grammar/: cfg.gram  cfg.rs  cfg_test.rs  const_properties.rs  mod.rs
src/monitor/: discord_logger.rs  instrumentation.rs  mod.rs  mod_test.rs  operation_eval.rs  operation_eval_test.rs  streams.rs  streams_test.rs  types.rs
src/monitor_setup/: expression_rules.rs  mod.rs  operation_types.rs  property_rules.rs  rules.rs  rules_test.rs  static_analysis.rs  static_analysis_test.rs  streams.rs  types.rs
src/monitorability/: expressions.rs  expressions_test.rs  mod.rs
src/program/: conversion_binary_operator.rs  conversion_binary_operator_test.rs  conversion_test.rs  conversion_units.rs  expressions.rs  expressions_test.rs  function_types.rs  member_types.rs  mod.rs  operations.rs  program_test.rs  units.rs
src/unit_check/: expressions.rs  mod.rs  types.rs  (+1 more)
tests/: integration_test.rs
(+15 files in other folders)
