[package]
name = "rv-iot"
version = "0.1.0"
edition = "2024"

[dependencies]
hime_redist = "4"
thiserror = "2.0.18"
tokio = { version = "^1.51.1", features = ["rt-multi-thread", "macros", "time"] }

colored = "2.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
